@@ -3,6 +3,8 @@ NEWS - OpenPrinting CUPS Filters v1.13.2 - 2016-12-28
 
 CHANGES IN V1.13.3
 
+	- libcupsfilters: Added the "output-bin" option support from
+	  CUPS' PPD generator to our PPD generator (CUPS Issue #4938).
 	- cups-browsed: Make support for printers with IPv6 IP address
 	  work. Link-local addresses where the interface has to be
 	  specified do not work.
